# learning-graphics-cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
MyVec3/: Camera.h  Color.h  Ray.h  Sphere.h  Vec3.h  main.cpp
MyVec3.xcodeproj/: project.pbxproj
MyVec3.xcodeproj/xcuserdata/ivankuznetsov.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/: test_camera.cpp  test_sphere.cpp  test_vec3.cpp
